# pokkit

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
.run/: desktop.run.xml
app/: build.gradle.kts  proguard-rules.pro
app/src/jvmMain/kotlin/: Main.kt  MainViewModel.kt
app/src/jvmMain/kotlin/com/daonvshu/pokkit/: Main.kt  MainViewModel.kt
app/src/jvmMain/kotlin/com/daonvshu/pokkit/backendservice/: BackendDataObserver.kt  BackendService.kt  CommandDataHandler.kt  DownloadService.kt
app/src/jvmMain/kotlin/com/daonvshu/pokkit/bangumi/: BangumiMain.kt  BangumiMainVm.kt  BangumiSharedVm.kt
app/src/jvmMain/kotlin/com/daonvshu/pokkit/database/: Databases.kt  MigrationRunner.kt  Migrations.kt
app/src/jvmMain/kotlin/com/daonvshu/pokkit/settings/: AppSettings.kt
backend/: .gitignore  CMakeLists.txt
backend/src/: CMakeLists.txt  commanddatahandler.cpp  commanddatahandler.h  datapublish.h  main.cpp  pokkitbackendservice.cpp  pokkitbackendservice.h
backend/src/providers/: downloadserviceprovider.cpp  downloadserviceprovider.h
backend/src/providers/tasks/: torrentcontentfetchtask.cpp  torrentcontentfetchtask.h  torrentdownloadinfo.cpp  torrentdownloadinfo.h  torrentfetchresult.h
backend/src/services/: downloadservice.h  dumputil.h
backend/src/utils/: datakey.h  globalenv.cpp  globalenv.h
bangumi/: build.gradle.kts
bangumi/src/jvmMain/kotlin/: BangumiMain.kt  BangumiMainVm.kt
bangumi/src/jvmMain/kotlin/com/daonvshu/bangumi/: BangumiMain.kt  BangumiMainVm.kt  BangumiSharedVm.kt
bangumi/src/jvmMain/kotlin/com/daonvshu/bangumi/dialog/: TorrentAddTaskDialog.kt  TorrentAddTaskDialogVm.kt  TorrentDownloadDialog.kt  TorrentDownloadDialogVm.kt  TorrentRemoveDialog.kt
bangumi/src/jvmMain/kotlin/com/daonvshu/bangumi/network/: BgmListApi.kt  BgmListApiService.kt  BgmTvApi.kt  BgmTvApiService.kt  MikanApi.kt  MikanApiService.kt
bangumi/src/jvmMain/kotlin/com/daonvshu/bangumi/pages/: DownloadBangumiPage.kt  DownloadBangumiPageVm.kt  DownloadListPage.kt  DownloadListPageVm.kt  DownloadOtherPage.kt  DownloadOtherPageVm.kt  DownloadPage.kt  DownloadPageVm.kt  MikanBangumiDetailPage.kt  MikanBangumiDetailPageVm.kt  MikanDataView.kt  MikanDataViewVm.kt  SearchPage.kt  SettingPage.kt  SettingPageVm.kt
bangumi/src/jvmMain/kotlin/com/daonvshu/bangumi/repository/: DownloadDataRepository.kt  MikanDataRepository.kt
bangumi/src/jvmMain/kotlin/com/daonvshu/bangumi/utils/: MikanDataParseUtil.kt
bangumi/src/jvmMain/kotlin/com/daonvshu/mikan/: BangumiMain.kt  BangumiMainVm.kt  BangumiSharedVm.kt
bangumi/src/jvmMain/kotlin/com/daonvshu/mikan/network/: MikanApi.kt  MikanApiService.kt
bangumi/src/jvmMain/kotlin/com/daonvshu/mikan/pages/: MikanBangumiDetailPage.kt  MikanBangumiDetailPageVm.kt  MikanDataView.kt  MikanDataViewVm.kt
bangumi/src/jvmMain/kotlin/com/daonvshu/mikan/repository/: MikanDataRepository.kt  MikanDbRepository.kt
bangumi/src/jvmMain/kotlin/com/daonvshu/mikan/utils/: MikanDataParseUtil.kt
bangumi/src/jvmMain/kotlin/pages/: MikanDataView.kt  MikanDataViewVm.kt
pixiv/: build.gradle.kts
shared/: build.gradle.kts
shared/src/commonMain/kotlin/: FontFamily.kt
shared/src/commonMain/kotlin/com/daonvshu/shared/backendservice/: BackendDataObserver.kt  BackendService.kt  BackendServiceException.kt  CommandDataHandler.kt  DownloadService.kt
shared/src/commonMain/kotlin/com/daonvshu/shared/components/: BaseDialog.kt  DashedDivider.kt  FlowRowGroup.kt  ImageLoadingIndicator.kt  LogBox.kt  NormalCheckBox.kt  ShapeIconButton.kt  Spacer.kt  StandardButton.kt  TabNavBar.kt  TextArea.kt  TreeCheckBoxView.kt  TreeView.kt  VerticalNavBar.kt
shared/src/commonMain/kotlin/com/daonvshu/shared/database/: Databases.kt  DriverFactory.kt  MigrationRunner.kt  Migrations.kt
shared/src/commonMain/kotlin/com/daonvshu/shared/font/: FontFamily.kt
shared/src/commonMain/kotlin/com/daonvshu/shared/settings/: AppSettings.kt
shared/src/commonMain/kotlin/com/daonvshu/shared/styles/: TextStyle.kt
shared/src/commonMain/kotlin/com/daonvshu/shared/utils/: ColorPalette.kt  FileUtils.kt  ImageCacheLoader.kt  LogCollector.kt  NavUtils.kt  PrimaryColors.kt  SizeUtils.kt
shared/src/commonMain/kotlin/components/: DashedDivider.kt  FlowRowGroup.kt  TabNavBar.kt  VerticalNavBar.kt
shared/src/commonMain/sqldelight/com/daonvshu/shared/database/: MikanDataRecord.sq
(+47 files in other folders)
